syntax = "proto3";

package proto.hello;

option go_package = "github.com/RyoJerryYu/grpc-server-demo/gen";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc StreamHello (stream HelloRequest) returns (stream HelloResponse);
}
